--- a/SisEva-SPA/package.json
+++ b/SisEva-SPA/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@auth0/angular-jwt": "^2.0.0",
+    "alertify": "^0.3.0",
     "bootswatch": "^4.3.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
