--- a/SisEva-SPA/package.json
+++ b/SisEva-SPA/package.json
@@ -23,6 +23,8 @@
     "alertify": "^0.3.0",
     "bootswatch": "^4.3.1",
     "core-js": "^2.5.4",
+    "datatables.net-bs4": "^1.10.19",
+    "jqgrid": "^4.6.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
